cmake_minimum_required(VERSION 2.8.7)
PROJECT(tinyCV)

FIND_PACKAGE(JPEG)
IF(JPEG_FOUND)
  SET(optionalSources ${optionalSources} jpegview.c)
  INCLUDE_DIRECTORIES( ${JPEG_INCLUDE_DIR} )
  SET(optionalLibs ${optionalLibs} ${JPEG_LIBRARIES} )
  ADD_DEFINITIONS(-DENABLE_JPEG_SUPPORT)
ENDIF(JPEG_FOUND)

INCLUDE_DIRECTORIES(core)

SET(CMAKE_VERBOSE_MAKEFILE on)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY build)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY build)

SET(CMAKE_CXX_FLAGS -std=c++11)

ADD_EXECUTABLE(test test/test.cpp)
TARGET_LINK_LIBRARIES(test -ljpeg)